--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -4,7 +4,7 @@
     <div class="relative flex justify-between xl:grid xl:grid-cols-12 lg:gap-8">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <!-- Mobile menu button-->
-        <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+        <button type="button" (click)="toggleMobileMenu();" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
           <span class="sr-only">Open main menu</span>
           <!--
             Icon when menu is closed.
@@ -13,9 +13,10 @@
 
             Menu open: "hidden", Menu closed: "block"
           -->
-          <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <svg id="buttonMenu" class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
+          <span class="sr-only">Open main menu</span>
           <!--
             Icon when menu is open.
 
@@ -23,7 +24,7 @@
 
             Menu open: "block", Menu closed: "hidden"
           -->
-          <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <svg id="cross" class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
         </button>
@@ -32,7 +33,7 @@
         <div class="flex-shrink-0 flex items-center">
           <a routerLink="/home">
             <img class="hidden md:block h-6 md:h-8 w-auto md:ml-4" src="assets/img/logo.png" alt="logo">
-            <img class="md:hidden block h-6 md:h-8 w-auto md:ml-4" src="assets/img/logo.png" alt="logo" style="margin-left: 190%;">
+            <!--<img class="md:hidden block h-6 md:h-8 w-auto md:ml-4" src="assets/img/logo.png" alt="logo" style="margin-left: 190%;">-->
           </a>
         </div>
       </div>
@@ -72,7 +73,7 @@
             </p>
           </button>
           <div id="menu-notifications"
-            class="w-3/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
+            class="w-8/12 lg:w-3/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
             <!--      <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
               <img class="h-8 w-8 rounded-full object-cover mx-1"
                   src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
@@ -85,9 +86,9 @@
             <div *ngFor="let notification of notifications; index as i;">
               <div class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
                 <img routerLink="/user/{{ notification.user_responsible.id }}/profile"
-                  class="h-8 w-8 rounded-full object-cover mx-1" src="http://localhost:81/assets/img/{{ notification.user_responsible.imgAvatar }}"
+                  class="hidden md:block h-8 w-8 rounded-full object-cover mx-1" src="http://localhost:81/assets/img/{{ notification.user_responsible.imgAvatar }}"
                   alt="avatar">
-                <p class="text-gray-600 text-sm mx-2">
+                <p *ngIf="notification.typeNotification != 2" (mouseover)="notificationRead(notification.id, i)" class="text-gray-600 text-sm mx-2">
                   <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold"> {{
                     notification.user_responsible.username }} </a>
                   {{ notification.bodyNotification }}
@@ -99,9 +100,9 @@
                 <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
                 (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)">
                   <i class="fas fa-times-circle text-red-700 hover:text-red-500"></i>Rechazar</button>
-                <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
+                <!--<button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                 (click)="notificationRead(notification.id, i)">
-                  <i class="fas fa-check-double hover:text-gray-500"></i>Leído</button>
+                  <i class="fas fa-check-double hover:text-gray-500"></i>Leído</button>-->
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                 (click)="removeNotification(notification.id, i)">
                   <i class="fas fa-trash-alt text-red-700 hover:text-red-500"></i>Borrar</button>
@@ -165,31 +166,19 @@
           </div>
         </ul>
       </div>
-      <div class="hidden" id="mobile-menu">
-        <div class="px-2 pt-2 pb-3 space-y-1">
-          <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
-    
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
-    
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
-    
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
-        </div>
-      </div>
     </div>
   </div>
 <!-- Mobile menu, show/hide based on menu state. -->
-<div class="hidden" id="mobile-menu">
+<div class="hidden" id="mobile-menu2">
   <div class="px-2 pt-2 pb-3 space-y-1">
     <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-    <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
+    <a routerLink="/home" class="text-gray-800 hover:bg-indigo-600 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a>
 
-    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
+    <a routerLink="/store" class="text-gray-800 hover:bg-indigo-600 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Tienda</a>
 
-    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
+    <a routerLink="/message" class="text-gray-800 hover:bg-indigo-600 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mensajería</a>
 
-    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
+    <a routerLink="/user/list" class="text-gray-800 hover:bg-indigo-600hover:text-white block px-3 py-2 rounded-md text-base font-medium">Usuarios</a>
   </div>
 </div>
   <!-- Mobile menu, show/hide based on menu state. -->
