--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -113,7 +113,7 @@
           </nav>
         </aside>
 
-        <form #formProfile="ngForm" id="formProfile" class="divide-y divide-gray-200 lg:col-span-9" method="POST"
+        <form #formProfile="ngForm" id="formProfile" class="divide-y divide-gray-200 lg:col-span-9" method="POST" enctype="multipart/form-data"
           (ngSubmit)="edit(); formProfile.reset(); showAlert();">
           <div id="alert" class="hidden rounded-md bg-green-50 p-4">
             <div class="flex">
@@ -191,7 +191,7 @@
                     class="absolute inset-0 w-full h-full bg-black bg-opacity-75 flex items-center justify-center text-sm font-medium text-white opacity-0 hover:opacity-100 focus-within:opacity-100">
                     <span>Cambiar</span>
                     <span class="sr-only">Foto de usuario</span>
-                    <input type="file" (change)="changeImgAvatar($event.target.files)" id="imgAvatar" name="img"
+                    <input type="file" (change)="changeImgAvatar($event.target.files)" id="imgAvatar" name="imgAvatar[]"
                       class="absolute inset-0 w-full h-full opacity-0 cursor-pointer border-gray-300 rounded-md">
                   </label>
                 </div>
@@ -247,7 +247,7 @@
               </button>
             </div>
           </div>
-          
+
         </form>
       </div>
     </div>
