--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -148,7 +148,7 @@
             <div>
               <button mat-icon-button class="bg-gray-800 flex text-sm rounded-full focus:outline-none" id="user-menu" aria-haspopup="true">
                 <span class="sr-only">Open user menu</span>
-                <img class="rounded-full" src="http://localhost:81/assets/img/{{ user.imgAvatar }}" alt="imgAvatar">
+                <img class="rounded-full" src="http://localhost:81/assets/img/{{ user.imgAvatar }}" alt="imgAvatar" style="width: 37px; height: 37px; margin-top:5px;">
               </button>
             </div>
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1
