--- a/artist4all_angular/src/app/components/public/register/register.component.html
+++ b/artist4all_angular/src/app/components/public/register/register.component.html
@@ -54,6 +54,13 @@
             class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
             <i class="fas fa-times-circle"></i>
             Nombre no válido
+            <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showNameHint()" (mouseleave)="showNameHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+            <div *ngIf="showingNameHint" id="nameHint">
+              Requisitos: <br>
+              - Longitud mínima de 2 carácteres. <br>
+              - Longitud máxima de 50 carácteres. <br>
+              - No puede tener carácteres especiales salvo: , . ' -
+            </div>
           </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -79,6 +86,13 @@
               class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               El 1r Apellido no es válido.
+              <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showSurname1Hint()" (mouseleave)="showSurname1Hint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+              <div *ngIf="showingSurname1Hint" id="surname1Hint">
+                Requisitos: <br>
+                - Longitud mínima de 2 carácteres. <br>
+                - Longitud máxima de 50 carácteres. <br>
+                - No puede tener carácteres especiales salvo: , . ' -
+              </div>
             </div>
           </div>
           <div>
@@ -103,6 +117,13 @@
               class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               El 2º Apellido no es válido.
+              <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showSurname2Hint()" (mouseleave)="showSurname2Hint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+              <div *ngIf="showingSurname2Hint" id="surname2Hint">
+                Requisitos: <br>
+                - Longitud mínima de 2 carácteres. <br>
+                - Longitud máxima de 50 carácteres. <br>
+                - No puede tener carácteres especiales salvo: , . ' -
+              </div>
             </div>
           </div>
         </div>
@@ -150,8 +171,14 @@
           </div>
           <div *ngIf="username.errors && username.errors.pattern"
             class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
-            <i class="fas fa-times-circle"></i>
-            Nombre de usuario no válido
+            <p class="inline-block"><i class="fas fa-times-circle mr-1"></i>Nombre de usuario no válido.</p>
+            <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showUsernameHint()" (mouseleave)="showUsernameHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+            <div *ngIf="showingUsernameHint" id="usernameHint">
+              Requisitos: <br>
+              - Longitud mínima de 5 carácteres. <br>
+              - Longitud máxima de 20 carácteres. <br>
+              - Solo se permiten números, letras y _.
+            </div>
           </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -167,7 +194,7 @@
                 focus:border-purple-500
                 focus:outline-none">
                 <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
-                  (click)="showOrHidePassword();">
+                (click)="showOrHidePassword();">
                   <i class="fas fa-eye fa-lg hover:text-gray-400" id="showIcon"></i>
                   <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
                 </div>
@@ -183,6 +210,13 @@
                 class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                 <i class="fas fa-times-circle"></i>
                 Contraseña no válida.
+                <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showPasswordHint()" (mouseleave)="showPasswordHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+                <div *ngIf="showingPasswordHint" id="passwordHint">
+                  Requisitos: <br>
+                  - Longitud mínima de 8 carácteres. <br>
+                  - Longitud máxima de 20 carácteres. <br>
+                  - Debe tener 1 número, 1 mayúscula y 1 minúscula.
+                </div>
               </div>
             </div>
           </div>
