--- a/artist4all_angular/src/app/components/public/register/register.component.html
+++ b/artist4all_angular/src/app/components/public/register/register.component.html
@@ -59,7 +59,7 @@
               Requisitos: <br>
               - Longitud mínima de 2 carácteres. <br>
               - Longitud máxima de 50 carácteres. <br>
-              - No puede tener carácteres especiales salvo: , . ' -
+              - No puede contener carácteres especiales salvo: (, . ' -).
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
                 Requisitos: <br>
                 - Longitud mínima de 2 carácteres. <br>
                 - Longitud máxima de 50 carácteres. <br>
-                - No puede tener carácteres especiales salvo: , . ' -
+                - No puede contener carácteres especiales salvo: (, . ' -).
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
                 Requisitos: <br>
                 - Longitud mínima de 2 carácteres. <br>
                 - Longitud máxima de 50 carácteres. <br>
-                - No puede tener carácteres especiales salvo: , . ' -
+                - No puede contener carácteres especiales salvo: (, . ' -).
               </div>
             </div>
           </div>
@@ -266,6 +266,10 @@
             class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
             Regístrate
           </button>
+        </div>
+        <div *ngIf="registerError" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <i class="fas fa-times-circle"></i>
+          {{ message }}
         </div>
       </form>
     <div class="text-sm">
