Validaciones relacionadas con el usuario, publicaciones y comentarios optimizadas(falta saber si ya tiene una cuenta por email)

--- a/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
@@ -7,8 +7,10 @@
   <label for="body">Cuerpo:</label> <br>
   <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" cols="100"
     rows="8"></textarea> <br>
-  <label for="imgOptional">Imagen(opcional): </label>
-  <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" multiple="multiple"/> <br>
+  <label for="imgOptional">Imagen(opcional):</label>
+  <input type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
+  <button type="button" (click)="removeSelectedImgs()">Desseleccionar las imagenes</button>
+  <br>
 
 
 
