--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -73,7 +73,7 @@
             </p>
           </button>
           <div id="menu-notifications"
-            class="w-8/12 lg:w-3/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
+            class="w-10/12 lg:w-3/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
             <!--      <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
               <img class="h-8 w-8 rounded-full object-cover mx-1"
                   src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
@@ -133,7 +133,8 @@
                 <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
               </p>
             </a>
-            <a href="/dashboard/notifications" id="subMenu"
+            <!-- TODO: MODIFICAR RUTA -->
+            <a routerLink="/notifications" id="subMenu"
               class="block bg-gray-800 text-white text-center font-bold py-2">Ver todas mis notificaciones</a>
             <!--TODO: Botones para cambiar a leido / Recoger los que leido == 0 -->
             <!--    TODO: En caso de que sea una solicitud de amistad,  aceptar o declinar (ambas pasan estado leido), si acepta (status_follow: 3 / else : 1) -->
