--- a/artist4all_angular/src/app/components/public/footer/footer.component.html
+++ b/artist4all_angular/src/app/components/public/footer/footer.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="px-5 py-2">
-        <a routerLink="/contact" class="text-base text-gray-400 hover:text-white">
+        <a routerLink="/policy" class="text-base text-gray-400 hover:text-white">
           Política de privacidad
         </a>
       </div>
