--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -68,12 +68,20 @@
         </nav>
       </div>
       <main class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
-        <button routerLink="/user/{{ id }}/publications"> Crear publicación </button> <!-- todo faltan estilos -->
-        <form action="/posts/new" method="POST" class="flex mb-4 flex-col">
-          <textarea class="w-full resize-y rounded-md shadow border-0 text-sm flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
-            rows="5" name="content" placeholder="Escribe algo..."></textarea>
+        <form #formPublication="ngForm" enctype="multipart/form-data" method="POST" class="flex flex-col" (ngSubmit)="createPublication(); formPublication.reset()">
+          <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
+            rows="5" name="content" placeholder="Escribe algo...">
+          </textarea>
+
+          <label for="imgPublication" >
+            <svg class="w-7 h-7 relative cursor-pointer text-gray-800" style="margin-top:-6%; margin-left:3%;" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+          </label>
+          <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
+          <!--<button class="inline-block w-6/12" type="button" (click)="removeSelectedImgs()">Eliminar las imágenes</button>-->
+
+        <img *ngFor='let url of images'  class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
           <div class="w-full flex justify-end" style="margin-bottom: -35px">
-            <button style="top: -45px; right: 10px; max-width: 100px;"
+            <button type="submit" style="top: -95px; right: 10px; max-width: 100px;"
               class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative">
               Publicar
             </button>
