--- a/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/comment/comment.component.html
@@ -1,13 +1,11 @@
 <app-user-navbar></app-user-navbar>
-<div class="lg: max-w-full grid lg:grid-cols-12 lg:gap-8 sm:grid-cols-2 bg-gray-100" style="padding-left: 0; min-height: 1000px;">
+<!-- <div class="lg: max-w-full grid lg:grid-cols-12 lg:gap-8 sm:grid-cols-2 bg-gray-100" style="padding-left: 0; min-height: 1000px;">
   <div class="hidden lg:block lg:col-span-2 bg-gray-800 min-h-screen">
     <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
       <div class="pb-8 space-y-1">
-        <!-- Current: "bg-gray-200 style="padding:25px;"text-gray-900", Default: "text-gray-600 hover:bg-gray-50" -->
         <a routerLink="/home"
           class="bg-gray-900 text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
           aria-current="page">
-          <!-- Heroicon name: outline/home -->
           <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -20,7 +18,6 @@
 
         <a routerLink="/store"
           class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-          <!-- Heroicon name: outline/fire -->
           <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -34,7 +31,6 @@
 
         <a routerLink="/user/{{ id }}/messages"
           class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-          <!-- Heroicon name: outline/user-group -->
           <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -48,7 +44,6 @@
 
         <a routerLink="/user/list"
           class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-          <!-- Heroicon name: outline/trending-up -->
           <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
@@ -62,7 +57,8 @@
   </div>
   <div class="lg:col-span-2"></div>
   <div class="container mt-5 mb-5 lg:col-span-6">
-    <!-- PUBLICATION -->
+
+
     <mat-card style="max-width: 980px;">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
@@ -91,14 +87,14 @@
         </form>
 
         <div id="myGroup" class="pt-4">
-          <div *ngFor="let comment of comments; index as i;" 
+          <div *ngFor="let comment of comments; index as i;"
           class="bg-white rounded-lg p-3  flex flex-col justify-center items-center md:items-start shadow-lg mb-4">
             <div *ngIf="comment.user.id == id"
              class="flex flex-row justify-center mr-2">
               <img alt="avatar" class="rounded-full mr-3 shadow-lg mt-1 mb-3"
                 src="http://localhost:81/assets/img/{{ comment.user.imgAvatar }}" style="width: 40px; height: 40px;">
                 <div class="">
-                  <h3 class="mt-3 text-indigo-600 font-semibold text-base text-center md:text-left">{{ comment.user.username }}</h3> 
+                  <h3 class="mt-3 text-indigo-600 font-semibold text-base text-center md:text-left">{{ comment.user.username }}</h3>
                 </div>
             </div>
             <div class="mt-2 w-full">
@@ -122,7 +118,7 @@
                 </div>
               </div>
               <button style="margin-left:48%;" class="focus:outline-none" (click)="toggleEditForm(i, comments)"> <i class="fas fa-edit fa-md text-blue-500 hover:text-blue-600"></i> Editar</button>
-              <button class="focus:outline-none" style="margin-left:3%;" (click)="deleteComment(i, comments)"><i class="fas fa-trash-alt fa-md text-red-700 hover:text-red-500 mr-1"></i> Eliminar</button> 
+              <button class="focus:outline-none" style="margin-left:3%;" (click)="deleteComment(i, comments)"><i class="fas fa-trash-alt fa-md text-red-700 hover:text-red-500 mr-1"></i> Eliminar</button>
             </div>
             <div id="{{i + 'formResponseContainer'}}" *ngIf="responseFormIndexAux===i" class="p-2 w-full">
               <form [formGroup]="commentFormResponse" (ngSubmit)="postResponse(i, null, 0);">
@@ -175,10 +171,10 @@
                         <span class="ml-2 inline-block">Responder</span>
                       </div>
                       <button style="margin-left:60%;" class="focus:outline-none" (click)="toggleEditForm(ind, subcomments)"> <i class="fas fa-edit fa-md text-blue-500 hover:text-blue-600"></i> Editar</button>
-                      <button class="focus:outline-none" style="margin-left:3%;" (click)="deleteComment(ind, subcomments)"><i class="fas fa-trash-alt fa-md text-red-700 hover:text-red-500 mr-1"></i> Eliminar</button> 
+                      <button class="focus:outline-none" style="margin-left:3%;" (click)="deleteComment(ind, subcomments)"><i class="fas fa-trash-alt fa-md text-red-700 hover:text-red-500 mr-1"></i> Eliminar</button>
                     </div>
-                    <div> <!-- *ngIf="subcomment.user.id == id -->
-                      
+                    <div>
+
                     </div>
                   </div>
                   <div class="bg-white p-2 rounded-md">
@@ -206,4 +202,135 @@
       </section>
     </div>
   </div>
-</div>
+</div> -->
+
+<div class="container mt-5">
+      <div class="coment-bottom bg-white p-2 px-4">
+        <img class="rounded-circle mr-2" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
+        <form [formGroup]="commentForm" (ngSubmit)="postComment();">
+          <textarea formControlName="bodyComment" class="mr-3 border border-black rounded-md mt-3"
+            placeholder=" Añade tu comentario..." cols="150" rows="3"></textarea>
+          <button class="btn btn-primary mt-2 mb-2" style="right: 0;" type="submit">Comentar</button>
+        </form>
+      </div>
+
+  <div class="d-flex justify-content-center row" style="margin-bottom: 20%;">
+    <div class="col-md-8">
+      <div class="d-flex flex-column comment-section" id="myGroup">
+        <div *ngFor="let comment of comments; index as i;">
+          <div *ngIf="comment.user.id == id">
+            <button class="focus:outline-none" (click)="toggleEditForm(i, comments, 0)">Editar</button>
+            <button class="focus:outline-none" (click)="deleteComment(i, comments)">Eliminar</button>
+          </div>
+          <div class="bg-white p-2">
+            <div class="d-flex flex-row user-info">
+              <img class="rounded-circle" src="http://localhost:81/assets/img/{{ comment.user.imgAvatar }}" width="50">
+              <div class="d-flex flex-column justify-content-start ml-2">
+                <span class="d-block font-weight-bold name">{{ comment.user.username }}</span>
+                <span *ngIf="comment.isEdited == 0" class="date text-black-50">{{ comment.comment_date }}</span>
+                <span *ngIf="comment.isEdited == 1" class="date text-black-50">{{ comment.comment_date }} (editado)</span>
+              </div>
+            </div>
+            <div class="mt-2">
+              <form *ngIf="inComments && editCommentIndexAux===i && showingEditForm; else commentNoEdit" [formGroup]="editCommentForm" (ngSubmit)="editComment(i, comments, 0)">
+                <textarea formControlName="bodyComment" class="w-full">{{ comment.bodyComment }}</textarea> <br>
+                <button class="focus:outline-none" (click)="toggleEditForm(i, comments, 0)">Cancelar</button>
+                <button class="focus:outline-none" type="submit">Editar</button>
+              </form>
+              <ng-template #commentNoEdit>
+                <p class="comment-text">{{ comment.bodyComment }}</p>
+              </ng-template>
+            </div>
+            <div class="bg-white p-2">
+              <div class="d-flex flex-row fs-12">
+                <div class="p-2 cursor" (click)="toggleResponseForm(i)">
+                  <i class="fas fa-comment-dots"></i>
+                  <span class="ml-1">Comentar</span>
+                </div>
+                <div class="p-2 cursor" (click)="toggleSubcomments(i)">
+                  <i class="fas fa-comments"></i>
+                  <span class="ml-1">Ver respuestas</span>
+                </div>
+              </div>
+            </div>
+
+            <div id="{{i + 'formResponseContainer'}}" *ngIf="responseFormIndexAux===i" class="bg-light p-2">
+              <form [formGroup]="commentFormResponse" (ngSubmit)="postResponse(i, null, 0);">
+                <div class="d-flex flex-row align-items-start">
+                  <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
+                  <textarea formControlName="bodyComment" class="form-control ml-1 shadow-none textarea"></textarea>
+                </div>
+                <div class="mt-2 text-right">
+                  <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1" type="button"
+                    (click)="toggleResponseForm(i)">Cancelar</button>
+                  <button class="btn btn-primary btn-sm shadow-none" type="submit">Publicar respuesta</button>
+                </div>
+              </form>
+            </div>
+
+            <div id="{{i + 'subcommentContainer'}}" *ngIf="subcommentIndexAux===i" class="p-2 w-10/12 ml-16">
+              <div *ngIf="subcomments == null">Este comentario actualmente no tiene respuestas.</div>
+              <div *ngIf="subcomments != null">
+                <div *ngFor="let subcomment of subcomments; index as ind;">
+                  <div *ngIf="subcomment.user.id == id">
+                    <button class="focus:outline-none" (click)="toggleEditForm(ind, subcomments, 1)">Editar</button>
+                    <button class="focus:outline-none" (click)="deleteComment(ind, subcomments)">Eliminar</button>
+                  </div>
+                  <div class="d-flex flex-row user-info">
+                    <img class="rounded-circle" src="http://localhost:81/assets/img/{{ subcomment.user.imgAvatar }}"
+                      width="50">
+                    <div class="d-flex flex-column justify-content-start ml-2">
+                      <span class="d-block font-weight-bold name">{{ subcomment.user.username }}</span>
+                      <span *ngIf="subcomment.isEdited == 0" class="date text-black-50">{{ subcomment.comment_date }}</span>
+                      <span *ngIf="subcomment.isEdited == 1" class="date text-black-50">{{ subcomment.comment_date }} (editado)</span>
+                    </div>
+                  </div>
+                  <div class="mt-2">
+                    <form *ngIf="inSubcomments && editCommentIndexAux===ind && showingEditForm; else subcommentNoEdit" [formGroup]="editCommentForm" (ngSubmit)="editComment(ind, subcomments, 1)">
+                      <textarea formControlName="bodyComment" class="w-full">{{ subcomment.bodyComment }}</textarea> <br>
+                      <button class="focus:outline-none" (click)="toggleEditForm(ind, subcomments, 1)">Cancelar</button>
+                      <button class="focus:outline-none" type="submit">Editar</button>
+                    </form>
+                    <ng-template #subcommentNoEdit>
+                      <p class="comment-text">
+                        <a routerLink="/user/{{ subcomment.user_reference.id }}/profile" class="text-blue-500">
+                          @{{ subcomment.user_reference.username }}
+                        </a>{{ subcomment.bodyComment }}
+                      </p>
+                    </ng-template>
+                  </div>
+                  <div class="bg-white p-2">
+                    <div class="d-flex flex-row fs-12">
+                      <div class="p-2 cursor -ml-1" (click)="toggleSubcommentResponseForm(ind, i);">
+                        <i class="fas fa-comment-dots"></i>
+                        <span class="ml-1">Responder</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bg-white p-2 rounded-md">
+                    <div id="{{ind +'formSubcommentResponseForm'}}" *ngIf="subCommentFormAuxIndex===ind"
+                      class="bg-light p-2 mt-1">
+                      <form [formGroup]="commentFormResponse" (ngSubmit)="postResponse(i, ind, 1);">
+                        <div class="d-flex flex-row align-items-start">
+                          <img class="rounded-circle" src="http://localhost:81/assets/img/{{ imgAvatar }}" width="50">
+                          <textarea formControlName="bodyComment"
+                            class="form-control ml-1 shadow-none textarea"></textarea>
+                        </div>
+                        <div class="mt-2 text-right">
+                          <button class="btn btn-outline-primary btn-sm ml-1 shadow-none mr-1"
+                            (click)="toggleSubcommentResponseForm(ind, i);" type="button">Cancelar</button>
+                          <button class="btn btn-primary btn-sm shadow-none" type="submit">Publicar respuesta</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
