--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -214,8 +214,7 @@
             <div *ngFor="let publication of publications; index as i;">
               <mat-card class="rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" style="max-width: 980px; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 20px;">
                 <mat-card-subtitle *ngIf="publication.isEdited == 0">{{ publication.upload_date }}</mat-card-subtitle>
-                <mat-card-subtitle *ngIf="publication.isEdited == 1">{{ publication.upload_date }} (editada)
-                </mat-card-subtitle>
+                <mat-card-subtitle *ngIf="publication.isEdited == 1">{{ publication.upload_date }} (editada)</mat-card-subtitle>
                 <mat-card-content>
                   <p>
                     {{ publication.bodyPublication }}
@@ -241,7 +240,6 @@
                           <span class="sr-only">Next</span>
                         </a>
                       </div>
-
                     </div>
                   </div>
                 </div>
