still styling policy privacy

--- a/artist4all_angular/src/app/components/public/privacy/privacy.component.html
+++ b/artist4all_angular/src/app/components/public/privacy/privacy.component.html
@@ -1,8 +1,18 @@
-<h3 class="font-bold text-3xl mt-8 mb-8">Política de privacidad</h3>
-<p class="block">Última actualización: 04 de mayo de 2021</p>
+<!-- https://www.privacypolicies.com/live/f6fe20c6-cd67-48cd-b19e-347dcc0ad946 --> 
+<main class="w-10/12 mx-auto">
+    <h3 class="font-bold text-3xl mt-8 mb-8">Política de privacidad</h3>
+    <p class="block mb-3">Última actualización: 04 de mayo de 2021</p>
 
-<p>Esta Política de Privacidad describe nuestras políticas y procedimientos sobre la recopilación, uso y divulgación de su información cuando utiliza el Servicio y le informa sobre sus derechos de privacidad y cómo la ley lo protege.</p>
+    <p class="block mb-3">Esta Política de Privacidad describe nuestras políticas y procedimientos sobre la recopilación, uso y divulgación de su información cuando utiliza el Servicio y le informa sobre sus derechos de privacidad y cómo la ley lo protege.</p>
 
-<p>Utilizamos sus datos personales para proporcionar y mejorar el Servicio. Al utilizar el Servicio, Usted acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad ha sido creada con la ayuda del Generador de Políticas de Privacidad.</p>
-<h2 class="font-bold text-2xl"></h2>
+    <p class="block mb-3">Utilizamos sus datos personales para proporcionar y mejorar el Servicio. Al utilizar el Servicio, Usted acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad ha sido creada con la ayuda del Generador de Políticas de Privacidad.</p>
+    <h3 class="font-bold text-3xl mb-4">Interpretación y definiciones</h3>
+    <h2 class="font-bold text-2xl mb-3">Interpretación</h2>
+    <p class="block mb-3">Las palabras de las que la letra inicial está en mayúsculas tienen significados definidos bajo las siguientes condiciones. Las definiciones que figuran a continuación tendrán el mismo significado independientemente de que aparezcan en singular o en plural.</p>
+    <h2 class="font-bold text-2xl mb-3">Definiciones</h2>
+    <p class="block mb-3">A los efectos de la presente Política de Privacidad:</p>
+    <ul>
+        <li>Cuenta significa una cuenta única creada para que Usted pueda acceder a nuestro Servicio o a partes de nuestro Servicio.</li>
+    </ul>
+</main>
 <app-footer></app-footer>
